basically done i guess

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <head>
   <meta name="description" content="skittles" />
   <meta charset="utf-8">
-  <title>Game for kittiemilktoes &lt;3</title>
+  <title>Game for kittiemilktoes</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
-  
     <script src="https://cdn.jsdelivr.net/npm/phaser@v3.80.1/dist/phaser.min.js"></script>
+    <script defer src="LevelScene.js"></script>
     <script defer src="game.js"></script>
 
 <script>
